--- a/NWM/DESCRIPTION
+++ b/NWM/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: NWM
 Title: What the Package Does (one line, title case)
 Version: 0.0.0.9000
-Authors@R: person("First", "Last", email = "first.last@example.com", role = c("aut", "cre"))
+Authors@R: person("Mike", "Johnson", email = "mike.johnson@geog.ucsb.edu", role = c("aut", "cre"))
 Description: What the package does (one paragraph).
 Depends: R (>= 3.4.1)
 License: What license is it under?
