--- a/NWM/DESCRIPTION
+++ b/NWM/DESCRIPTION
@@ -1,9 +1,18 @@
 Package: NWM
-Title: What the Package Does (one line, title case)
+Title: Accessing, storing and analyzing NWM data.
 Version: 0.0.0.9000
+Date: 2017-07-10
 Authors@R: person("Mike", "Johnson", email = "mike.johnson@geog.ucsb.edu", role = c("aut", "cre"))
 Description: What the package does (one paragraph).
-Depends: R (>= 3.4.1)
+Depends: R (>= 3.3.1)
+Depends:
+  rjson,
+  lubridate,
+  ncdf4,
+  dplyr,
+  rgdal,
+  svDialogs,
+  XML
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
