--- a/NWM/NAMESPACE
+++ b/NWM/NAMESPACE
@@ -5,6 +5,8 @@ export(build_files)
 export(get_COMIDs)
 export(get_HUC6_data)
 export(get_current)
+export(get_rating_curves)
 export(get_server)
+export(substrRight)
 export(viz_csv)
 export(viz_current)
