--- a/NWM/NAMESPACE
+++ b/NWM/NAMESPACE
@@ -7,6 +7,7 @@ export(get_HUC6_data)
 export(get_current)
 export(get_rating_curves)
 export(get_server)
+export(get_stage)
 export(substrRight)
 export(viz_csv)
 export(viz_current)
