living_flood_data

--- a/NWM/NAMESPACE
+++ b/NWM/NAMESPACE
@@ -8,6 +8,7 @@ export(get_current)
 export(get_rating_curves)
 export(get_server)
 export(get_stage)
+export(living_flood_data)
 export(substrRight)
 export(viz_csv)
 export(viz_current)
