--- a/NWM/NAMESPACE
+++ b/NWM/NAMESPACE
@@ -9,6 +9,7 @@ export(get_rating_curves)
 export(get_server)
 export(get_stage)
 export(living_flood_data)
+export(living_flood_setup)
 export(substrRight)
 export(viz_csv)
 export(viz_current)
