--- a/NWM/NAMESPACE
+++ b/NWM/NAMESPACE
@@ -5,6 +5,7 @@ export(build_files)
 export(get_COMIDs)
 export(get_HUC6_data)
 export(get_current)
+export(get_flowlines)
 export(get_rating_curves)
 export(get_server)
 export(get_stage)
