--- a/NWM/DESCRIPTION
+++ b/NWM/DESCRIPTION
@@ -5,7 +5,7 @@ Date: 2017-07-10
 Authors@R: person("Mike", "Johnson", email = "mike.johnson@geog.ucsb.edu", role = c("aut", "cre"))
 Description: What the package does (one paragraph).
 Depends: R (>= 3.3.1)
-Depends:
+Imports:
   rjson,
   lubridate,
   ncdf4,
