--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,8 @@ Description: Each day the NOAA NWM produces 404 GB of forecast data for the CONU
     This package provides access to this data.
 Encoding: UTF-8
 Depends:
-    R(>= 3.3.0)
+    R(>= 3.3.0),
+    AOI
 Imports:
   AOI,
   doParallel,
