--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,17 +4,16 @@ export(comidList)
 export(define_AOI_grid)
 export(downloadNWM)
 export(error.check)
-export(findNHD)
 export(getChannel)
 export(getFilelist)
-export(getGrid_data)
-export(get_gridded_data)
+export(getGridTime)
+export(getGridded)
+export(getNHD)
 export(look)
 export(query_cida)
 export(trimChannel)
-importFrom(AOI,check)
-importFrom(AOI,getAOI)
-importFrom(AOI,getPoint)
+export(vizFlows)
+import(AOI)
 importFrom(doParallel,registerDoParallel)
 importFrom(foreach,"%do%")
 importFrom(foreach,"%dopar%")
@@ -23,10 +22,12 @@ importFrom(ncdf4,nc_close)
 importFrom(ncdf4,nc_open)
 importFrom(ncdf4,ncvar_get)
 importFrom(raster,extent)
+importFrom(raster,plot)
 importFrom(raster,projection)
 importFrom(raster,raster)
 importFrom(raster,stack)
 importFrom(sf,read_sf)
 importFrom(sf,st_zm)
+importFrom(sp,plot)
 importFrom(sp,spTransform)
 importFrom(stats,reshape)
