--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(getFilelist)
 export(getGridTime)
 export(getGridded)
 export(getNHD)
+export(getReservoir)
 export(look)
 export(query_cida)
 export(trimChannel)
