export metaData object

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(getNHD)
 export(getReservoir)
 export(look)
 export(query_cida)
+export(reservoir)
 export(trimChannel)
 export(vizFlows)
 import(AOI)
