--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,8 +12,8 @@ export(getGridded)
 export(getNHD)
 export(getReservoir)
 export(look)
+export(nwm)
 export(query_cida)
-export(reservoir)
 export(trimChannel)
 export(vizFlows)
 import(AOI)
