--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(getGridTime)
 export(getGridded)
 export(getNHD)
 export(getReservoir)
+export(getRetro)
 export(look)
 export(nwm)
 export(query_cida)
