post AGU update

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,11 +5,11 @@ export(comidList)
 export(define_AOI_grid)
 export(downloadNWM)
 export(error.check)
+export(findNHD)
 export(getChannel)
 export(getFilelist)
 export(getGridTime)
 export(getGridded)
-export(getNHD)
 export(getReservoir)
 export(getRetro)
 export(look)
