Change from ncdf4 to RNetCDF
Should now work on window platforms!!

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,9 @@ export(query_cida)
 export(trimChannel)
 export(vizFlows)
 import(AOI)
+importFrom(RNetCDF,close.nc)
+importFrom(RNetCDF,open.nc)
+importFrom(RNetCDF,var.get.nc)
 importFrom(crayon,blue)
 importFrom(crayon,underline)
 importFrom(doParallel,registerDoParallel)
@@ -25,9 +28,6 @@ importFrom(foreach,"%do%")
 importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
 importFrom(magrittr,"%>%")
-importFrom(ncdf4,nc_close)
-importFrom(ncdf4,nc_open)
-importFrom(ncdf4,ncvar_get)
 importFrom(raster,extent)
 importFrom(raster,plot)
 importFrom(raster,projection)
@@ -35,6 +35,5 @@ importFrom(raster,raster)
 importFrom(raster,stack)
 importFrom(sf,read_sf)
 importFrom(sf,st_zm)
-importFrom(sp,plot)
 importFrom(sp,spTransform)
 importFrom(stats,reshape)
