--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,7 +15,6 @@ export(look)
 export(nwm)
 export(query_cida)
 export(trimChannel)
-export(vizFlows)
 import(AOI)
 importFrom(RNetCDF,close.nc)
 importFrom(RNetCDF,open.nc)
@@ -26,6 +25,8 @@ importFrom(doParallel,registerDoParallel)
 importFrom(foreach,"%do%")
 importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
+importFrom(httr,POST)
+importFrom(httr,write_disk)
 importFrom(magrittr,"%>%")
 importFrom(raster,extent)
 importFrom(raster,plot)
@@ -36,3 +37,4 @@ importFrom(sf,read_sf)
 importFrom(sf,st_zm)
 importFrom(sp,spTransform)
 importFrom(stats,reshape)
+importFrom(utils,unzip)
